2016-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.h.in, gpasm/lst.c, libgputils/gpmemory.c,
    libgputils/gpmemory.h:
    New functions and a listing bugfix.
	gp_mem_b_offset_is_used
	gp_mem_i_offset_is_used

2016-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.*, gpasm/cod.c, gpasm/file.c, gpasm/file.h,
    gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/lst.c, gpasm/macro.c,
    gpasm/parse.y, gpasm/scan.l, gpasm/util.c:
    Code optimizations.

  * libgputils/gpcoffgen.c, libgputils/gplist.c, libgputils/gplist.h:
    New function: gp_list_node_delete
    Renamed some functions.

2016-07-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/coff.c, gpasm/directive.c, gpasm/gpasm.c,
    gpasm/gpasm.h.in, gpasm/gpmsg.c, gpasm/lst.c, gpasm/macro.c,
    gpasm/parse.y, gpasm/preprocess.c, gpasm/scan.l, gpasm/util.c:
    Use libgputils/gplist functions.

  * libgputils/gpcoffgen.c, libgputils/gplist.c, libgputils/gplist.h:
    New function: gp_list_set_delete_node_func

2016-07-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/evaluate.c,
    gpasm/evaluate.h, gpasm/gpasm.c, gpasm/gpasm.h.in,
    gpasm/processor.c, gpasm/scan.l:
    New experimental directive: assume

  * gpasm/cod.c, gpasm/coff.c, gpasm/directive.c, gpasm/evaluate.c,
    gpasm/lst.c, gpasm/parse.y, gpasm/util.c, gplink/cod.c,
    gplink/lst.c, gplink/map.c, gplink/script.c, gputils/dump.c,
    gputils/gpdasm.c, gputils/gpvo.c, libgputils/gpcoffgen.c,
    libgputils/gpcofflink.c, libgputils/gpcoffopt.c,
    libgputils/gpdis.c, libgputils/gpmemory.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h
    libgputils/gpreadobj.c, libgputils/gpsymbol.c,
    libgputils/gpwriteobj.c:
    Renamed some functions:
	gp_processor_byte_to_org --> gp_processor_insn_from_byte_c
	gp_processor_org_to_byte --> gp_processor_byte_from_insn_c