@@ -1,4 +1,14 @@
 2016-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/directive.c:
+    Fixed the assume bug.
+
+  * gpasm/lst.c, libgputils/gpmemory.c, libgputils/gpmemory.h:
+    Renamed this function:
+	gp_mem_i_offset_is_used --> gp_mem_i_offset_is_used_le
+    New function:
+	gp_mem_i_offset_is_used_be
+
+2016-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/gpasm.h.in, gpasm/lst.c, libgputils/gpmemory.c,
     libgputils/gpmemory.h:
     New functions and a listing bugfix.
